<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/title_style"
        android:text="@string/title_label"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/star_icon"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/i_have_a_dream_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/assingnedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editPersonName"
                style="@style/title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/quem_disse_frase"
                android:inputType="textPersonName"
                android:text="@string/question_name_edit" />

            <Button
                android:id="@+id/assignButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/assinar_texto" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>